# DiveDB

./: .dockerignore  .env.example  .env.github  .flake8  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  Dockerfile  Dockerfile.rclone  Makefile  README.md  WORKING_data_upload_documentation.ipynb  __init__.py  conftest.py  data_querying_documentation.ipynb  data_upload_documentation.ipynb  data_visualization.ipynb  data_visualization.py  docker-compose.development.yaml  dryad_femaleseal_data_querying.ipynb  jkb-openrc.sh  manage.py  openstack.ipynb  pyproject.toml  pytest.ini  requirements.txt  run_tests.py  setup.py  test.Dockerfile  test_data_upload.ipynb  upload.Dockerfile
.github/workflows/: docker-build.yml  docs.yml  python-app.yml  quality-control.yml
DiveDB/: AI_DOCS.md  pyproject.toml
DiveDB/DiveDB/server/django_app/: settings.py
DiveDB/DiveDB/services/: duck_pond.py  metadata_manager.py
DiveDB/server/django_app/: serializers.py  settings.py  urls.py
DiveDB/server/metadata/: models.py  views.py
DiveDB/server/metadata/migrations/: 0002_alter_animaldeployments_options_and_more.py  0004_alter_loggers_wiki.py  0007_recordings_name.py  0008_files_metadata.py  0009_alter_animaldeployments_table_alter_animals_table_and_more.py  0010_files_start_time.py  0011_files_uploaded_at.py  0012_files_file.py  0013_remove_files_config_metadata.py  0015_animals_birth_year_animals_domain_ids_animals_lab_id_and_more.py  0016_recordings_attachment_location_and_more.py  0017_alter_deployments_timezone_alter_files_file.py
DiveDB/services/: __init__.py  data_uploader.py  dive_data.py  duck_pond.py  immich_service.py  metadata_manager.py  notion_orm.py
DiveDB/services/connection/: __init__.py  catalog_manager.py  dataset_manager.py  duckdb_connection.py  notion_integration.py  warehouse_config.py
DiveDB/services/utils/: cache_utils.py  edf.py  netcdf_conversions.py  openstack.py  sampling.py  storage.py
config/rclone/: rclone.conf
dash/: .gitignore  AI_DOCS.md  SASS_README.md  SELECTION_FEATURE_README.md  callbacks.py  clientside_callbacks.py  color_mapping.json  data_visualization.py  graph_utils.py  layout.py  logging_config.py  package-lock.json  package.json  selection_callbacks.py
dash/assets/: PenguinSwim.fbx  arrow-key-navigation.js  b-key-bookmark.js  channel-drag-drop.js  fullscreen.js  playback-manager.js  spacebar-play-pause.js  styles.scss  tooltip.js
dash/improvements/: client-side-playback-architecture.md
dash/layout/: __init__.py  core.py  indicators.py  modals.py  sidebar.py  timeline.py
dash/three_js_orientation/: data_visualization copy.py  package.json  usage.py
dash/video_preview/: data_vis.py
deployment/: build.sh  exec.sh  ghcr.secrets.sh  migrate.sh  pg.deployment.yaml  port-forward.sh  secrets.sh  set-default-namespace.sh
deployment/django/: build.sh  django.deployment.yaml  django.ingress.yaml  django.service.yaml
deployment/jupyter/: build.sh  jupyter.deployment.yaml  jupyter.ingress.yaml  jupyter.service.yaml
deployment/misc/: build.sh  deltalake-cephfs.pvc.yaml  deltalake.pvc.yaml  ssh.pod.yaml
deployment/pg/: build.sh  pg.deployment.yaml  pg.pvc.yaml  pg.service.yaml
deployment/upload-job/: build.sh  job.yaml  pvc.yaml
django_app/: settings.py
docs/: Makefile  conf.py  export_docs.ipynb  index.rst  querying_docs.ipynb  upload_docs.ipynb  upload_docs_dataset.ipynb  visualization_docs.ipynb
docs/src/: api.rst  conf.py  index.rst  readme_link.rst
examples/: querying_docs.ipynb  upload_docs.ipynb  visualization_docs.ipynb
files/: example_data.nc
immich_integration/: __init__.py  immich_service.py
jupyter/: Dockerfile  README.md  jupyter_notebook_config.py  requirements.txt
jupyter/notebooks/: data_upload_preview.ipynb  experimental.ipynb  openstack.ipynb
metadata/: models.py
metadata/migrations/: 0001_initial.py
prefect/: .gitignore  Dockerfile  Makefile  entrypoint.sh  prefect_server.py  requirements.txt
scripts/: import_from_dryad.py  import_from_dryad_2.py  import_from_dryad_dash.py  import_from_dryad_sync.py  import_from_notion.py  upload_delta_lake_to_openstack.py
scripts/metadata/: 11_Restimates_ALL_SealsUsed.csv  NES_TrackingDiving_MetaData.csv
server/: __init__.py
server/django_app/: asgi.py  settings.py  wsgi.py
server/metadata/: admin.py  apps.py  models.py
services/: __init__.py  data_uploader.py  delta_lake.py  duck_pond.py  metadata_manager.py
services/utils/: directory_utils.py  openstack.py  timing.py
src/: data_querying_documentation.ipynb  data_upload_documentation.ipynb
src/DiveDB/: conftest.py
src/services/: data_uploader.py  duck_pond.py  metadata_manager.py
tests/: test_admin.py  test_metadata_models.py
tests/server/: test_admin.py  test_metadata_models.py
tests/services/: test_catalog_manager.py  test_data_uploader.py  test_delta_lake.py  test_dive_data.py  test_duck_pond.py  test_metadata_manager.py  test_notion_orm.py  test_sampling.py  test_swift_client.py
three_js_orientation/: data_visualization copy.py  usage.py
three_js_orientation/man/: threeJsOrientation.Rd
three_js_orientation/three_js_orientation/: ThreeJsOrientation.py  _imports_.py  metadata.json  three_js_orientation.min.js  (+1 more)
threejs_model/: DESCRIPTION  MANIFEST.in  NAMESPACE  Project.toml  README.md  _validate_init.py  index.html  package-lock.json  usage.ipynb  usage.py  webpack.config.js
video_preview/: _validate_init.py  data_vis.py
(+66 files in other folders)
