[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DiveDB"
version = "0.1.0"
dependencies = [
  "black",
  "bs4",
  "dash",
  "dash[testing]",
  "dask",
  "pyiceberg[sql-sqlite,pyarrow]",
  "duckdb",
  "edfio",
  "flake8",
  "google-cloud-storage",
  "importlib-metadata==4.8.3",
  "load_dotenv",
  "mne",
  "netcdf4",
  "notion_client",
  "numpy",
  "pandas",
  "pre-commit",
  "psycopg2-binary",
  "pyarrow",
  "pyedflib",
  "pytest",
  "pytest-mock",
  "pytest-recording",
  "python-keystoneclient",
  "python-swiftclient",
  "setuptools",
  "tqdm",
  "xarray",
]

# Add this section to explicitly specify only DiveDB as the package
[tool.setuptools.packages.find]
where = ["."]
include = ["DiveDB*"]

[tool.black]
line-length = 88
target-version = ["py37"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.lib
  | _build
  | buck-out
  | build
  | dist
  | services/duck_pond.py
  | pyologger
)/
'''
