[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DiveDB"
version = "0.1.0"
dependencies = [
  "bs4",
  "dask",
  "pyiceberg[sql-sqlite,pyarrow]",
  "duckdb",
  "edfio",
  "importlib-metadata==4.8.3",
  "load_dotenv",
  "mne",
  "netcdf4",
  "notion_client",
  "numpy",
  "pandas",
  "pre-commit",
  "psycopg2-binary",
  "pyarrow",
  "pyedflib",
  "python-keystoneclient",
  "python-swiftclient",
  "setuptools",
  "tqdm",
  "xarray",
]
